--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
 	"name": "explorer-format",
 	"version": "1.0.0",
-	"source": "src/index.ts",
-	"main": "build/index.js",
 	"license": "MIT",
 	"scripts": {
 		"watch": "parcel watch",
 		"build": "parcel build",
 		"build-format": "parcel build && ./bin/build-format",
-		"build-basic": "yarn build-format && tweego -o test/test-stories/output/index.html -l --log-files test/test-stories/basic.twee"
+		"build-basic": "yarn build-format && tweego -o tests/test-stories/output/index.html -l --log-files tests/test-stories/basic.twee"
 	},
 	"devDependencies": {
 		"handlebars": "^4.7.7",
 		"parcel": "^2.7.0"
+	},
+	"targets": {
+		"default": {
+			"source": "src/index.ts",
+			"distDir": "build"
+		}
 	}
 }
