--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
 	"name": "explorer-format",
 	"version": "1.0.0",
 	"license": "MIT",
+	"engines": {
+		"node": ">=16"
+	},
 	"scripts": {
+		"serve": "nodemon ./bin/dev-server",
 		"watch": "parcel watch",
 		"build": "parcel build",
 		"build-format": "parcel build && ./bin/build-format",
-		"build-basic": "yarn build-format && tweego -o tests/test-stories/output/index.html -l --log-files tests/test-stories/basic.twee"
+		"build-basic": "yarn build-format && extwee -c -i tests/test-stories/basic.twee -o tests/test-stories/output/index.html -s dist/format.js"
 	},
 	"devDependencies": {
 		"@parcel/transformer-sass": "2.7.0",
 		"@types/fabric": "^4.5.12",
+		"extwee": "^2.0.6",
+		"nodemon": "^2.0.20",
 		"parcel": "^2.7.0"
 	},
 	"targets": {
@@ -20,6 +26,9 @@
 			"sourceMap": {
 				"inline": true,
 				"inlineSources": true
+			},
+			"engines": {
+				"browsers": "> 0.25%"
 			}
 		},
 		"scss": {
@@ -28,15 +37,28 @@
 			"sourceMap": {
 				"inline": true,
 				"inlineSources": true
+			},
+			"engines": {
+				"browsers": "> 0.25%"
 			}
 		}
 	},
 	"dependencies": {
 		"fabric": "^5.2.4",
 		"handlebars": "^4.7.7",
-		"marked": "^4.1.0"
+		"marked": "^4.1.0",
+		"serve-handler": "^6.1.3"
 	},
 	"alias": {
 		"buffer": false
+	},
+	"nodemonConfig": {
+		"ext": "scss,ts,twee",
+		"verbose": true,
+		"ignore": [
+			"**/build/**",
+			"**/dist/**",
+			"**/tests/test-stories/output/**"
+		]
 	}
 }
